--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,3 @@
-header, div, footer {
-  border: 1px solid
-}
-
 html {
   font-size: 18px;
   font-family: helvetica;
@@ -68,6 +64,64 @@ header span {
   padding: 0.75rem 0rem;
 }
 
-.productcontainer, .infocontainer {
+.product {
+  background-color: white;
+}
+
+.productcontainer {
+  justify-content: space-between;
+  padding: 3rem 0rem;
+}
+
+.imagecontainer {
   display: flex;
+  flex-direction: column;
+  width: 30%;
+  border: 4px solid black;
+  align-items: center;
+}
+
+.imagecontainer2 {
+  display: flex;
+  height: 9rem;
+  width: auto;
+  padding: 2rem 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.imagecontainer img {
+  max-width: 8rem;
+}
+
+.imagecontainer p {
+  width: 100%;
+  background-color: black;
+  text-align: center;
+  padding: 0.5rem 0;
+}
+
+.info {
+  background-color: white;
+  color: black;
+}
+
+.infocontainer {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 4rem;
+}
+
+.infocontentcontainer {
+  width: 35%;
+}
+
+.infotitlecontainer {
+  background-color: black;
+  color: white;
+  padding: 1rem 2rem;
+}
+
+footer {
+  height: 5rem;
 }
